--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "license": "MIT",
   "dependencies": {
     "cross-fetch": "^3.0.6",
-    "jsbi": "^3.1.2"
+    "jsbi": "^3.1.2",
+    "ckb-js-toolkit-contrib": "0.1.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.0.0",
